# fracture-app

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md  conda_env.yaml.bak  mamba_env.yml  node_selection_plan.txt  parquet_db.txt  pyproject.toml
app/: app.py  run.app
app/modules/: __init__.py  config.py  data_loader.py  data_processing.py  graph_safety.py  ui_components.py  visualization.py
src/: main.rs
