[project]
name = "fracture-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.1",
    "graphviz>=0.20.3",
    "metacells>=0.9.5",
    "ogtk>=0.1.5",
    "plotly>=5.24.1",
    "polars>=1.19.0",
    "pydot>=3.0.4",
    "rogtk>=0.1.5",
    "shiny>=1.2.1",
    "shinyswatch>=0.8.0",
    "shinywidgets>=0.4.2",
]
