[project]
name = "fracture-app"
version = "0.1.2"
description = "FRACTURE Explorer - Interactive assembly graph visualization and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.1",
    "graphviz>=0.20.3",
    "kaleido>=0.2.1",
    "matplotlib>=3.7.0", 
    "metacells>=0.9.5",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "ogtk>=0.1.5",
    "pandas>=2.0.0",
    "pathlib2>=2.3.0; python_version<'3.4'",
    "plotly>=5.24.1",
    "polars>=1.27.0",
    "pydot>=3.0.4",
    "rogtk>=0.1.5",
    "shiny>=1.2.1",
    "shinyswatch>=0.8.0",
    "shinywidgets>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
    "nb_conda_kernels>=2.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
